--- a/src/app/css/projects.css
+++ b/src/app/css/projects.css
@@ -8,7 +8,7 @@
     width: 7rem;
     border-radius: 2rem;
     border: 0.2rem solid transparent;
-    border-color: #00ff59;
+    border-color: #00eeff;
     z-index: 0;
     color: black;
     display: flex;
@@ -37,7 +37,7 @@
     color: white;
     transform: scale(1.05);
     cursor: pointer;
-    background: #1c685e;
+    background: #0055ff;
     border-color: #ffffff;
   }
 
